// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default: settings 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "backportBranchName": "backport/{{targetBranch}}-{{refValues}}",
  "commitConflicts": true,
  "prTitle": "{{sourcePullRequest.title}} (backport #{{sourcePullRequest.number}})",
  "targetBranchChoices": [
    "main",
  ],
  "targetPRLabels": [
    "backport",
    "auto-approve",
  ],
}
`;

exports[`default: workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: backport
on:
  pull_request_target:
    types:
      - labeled
      - unlabeled
      - closed
jobs:
  backport:
    name: Backport PR
    runs-on: ubuntu-latest
    permissions: {}
    if: github.event.pull_request.merged == true && !(contains(github.event.pull_request.labels.*.name, 'backport'))
    steps:
      - name: Check for backport labels
        id: check_labels
        run: |-
          labels='\${{ toJSON(github.event.pull_request.labels.*.name) }}'
          matched=$(echo $labels | jq '.|map(select(startswith("backport-to-"))) | length')
          echo "matched=$matched"
          echo "matched=$matched" >> $GITHUB_OUTPUT
        shell: bash
      - name: Backport Action
        if: fromJSON(steps.check_labels.outputs.matched) > 0
        uses: sqren/backport-github-action@v9.5.1
        with:
          github_token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          auto_backport_label_prefix: backport-to-
"
`;

exports[`no labels on backport PRs uses the backport branch name to detect backport PRs: workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: backport
on:
  pull_request_target:
    types:
      - labeled
      - unlabeled
      - closed
jobs:
  backport:
    name: Backport PR
    runs-on: ubuntu-latest
    permissions: {}
    if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'backport/'))
    steps:
      - name: Check for backport labels
        id: check_labels
        run: |-
          labels='\${{ toJSON(github.event.pull_request.labels.*.name) }}'
          matched=$(echo $labels | jq '.|map(select(startswith("backport-to-"))) | length')
          echo "matched=$matched"
          echo "matched=$matched" >> $GITHUB_OUTPUT
        shell: bash
      - name: Backport Action
        if: fromJSON(steps.check_labels.outputs.matched) > 0
        uses: sqren/backport-github-action@v9.5.1
        with:
          github_token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          auto_backport_label_prefix: backport-to-
"
`;

exports[`non-default settings: settings 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "backportBranchName": "auto-backport/{{targetBranch}}-{{refValues}}",
  "commitConflicts": false,
  "prTitle": "{{sourcePullRequest.title}} (backport #{{sourcePullRequest.number}})",
  "targetBranchChoices": [
    "one",
    "two",
  ],
  "targetPRLabels": [
    "magic",
  ],
}
`;

exports[`non-default settings: workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: other-backport
on:
  pull_request_target:
    types:
      - labeled
      - unlabeled
      - closed
jobs:
  backport:
    name: Backport PR
    runs-on: ubuntu-latest
    permissions: {}
    if: github.event.pull_request.merged == true && !(contains(github.event.pull_request.labels.*.name, 'magic'))
    steps:
      - name: Check for backport labels
        id: check_labels
        run: |-
          labels='\${{ toJSON(github.event.pull_request.labels.*.name) }}'
          matched=$(echo $labels | jq '.|map(select(startswith("copy-to-"))) | length')
          echo "matched=$matched"
          echo "matched=$matched" >> $GITHUB_OUTPUT
        shell: bash
      - name: Backport Action
        if: fromJSON(steps.check_labels.outputs.matched) > 0
        uses: sqren/backport-github-action@v9.5.1
        with:
          github_token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          auto_backport_label_prefix: copy-to-
"
`;
